# QAny

./: .env.example  .gitignore  CLAUDE.md  Harness Engineering.md  deploy.sh  docker-compose.yml  elasticsearch.Dockerfile  企业级知识库问答系统PRD.md
.claude/: mcp.json  settings.json
.claude/commands/: commit.md  docker.md  feedback-memory.md  to_user_prompt.md
.claude/hooks/: README.md  feedback_processor.py  hook-entry  (+3 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  logging_conf.py  main.py
backend/app/api/: deps.py  errors.py
backend/app/api/v1/: admin.py  auth.py
backend/app/auth/: blacklist.py  claims.py  jwt.py  login_limiter.py  passwords.py  user_repo.py
backend/app/models/: __init__.py  document.py  feedback.py  qa_log.py  settings.py  user.py
backend/app/rbac/: __init__.py  filter_builder.py
backend/app/storage/: es_client.py  pg.py  redis_client.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: init_es.py  seed_users.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_admin_gate.py  test_auth_api.py  test_blacklist.py  test_es_index.py  test_login_limiter.py  test_migrations.py  test_redis.py  test_seed_users.py  test_user_repo.py
backend/tests/unit/: test_claims.py  test_config.py  test_deps_require_role.py  test_errors.py  test_filter_builder.py  test_healthz.py  test_jwt.py  test_logging.py  test_models_smoke.py  test_passwords.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+13 files in other folders)
